Modifying the button content

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,8 +138,10 @@
                     <p class="project-desc">Application that allows a user to modify recipe size dynamically, add a new
                         recipe and see the new recipe loaded onto the home page</p>
                     <p class="skills-used">Skills used: HTML, CSS, Javascript, Local storage</p>
-                    <button type="button">See the site</button>
-                    <button type="button">See the code</button>
+                    <a href="http://willyhedge.com/WDV321/assignments/recipeManager/index.html" target="_blank"><button
+                            type="button">See the site</button></a>
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/recipeManager"><button
+                            type="button">See the code</button></a>
                 </div>
             </div>
 
@@ -150,8 +152,10 @@
                     <p class="project-desc">Sample advertisement created for Iowa Hawkeye football tickets on the
                         University of Iowa homepage</p>
                     <p class="skills-used">Skills used: HTML, CSS, CSS Animation</p>
-                    <button type="button">See the site</button>
-                    <button type="button">See the code</button>
+                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html"><button
+                            type="button">See the site</button></a>
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd"><button
+                            type="button">See the code</button></a>
                 </div>
             </div>
 
@@ -180,8 +184,8 @@
                     <h1 class="project-title">Skyline Fitness Website</h1>
                     <p class="project-desc">Fictional gym website that uses Bootstrap as the layout tool</p>
                     <p class="skills-used">Skills used: HTML, CSS, Bootstrap, CSS Animation</p>
-                    <button type="button">See the site</button>
-                    <button type="button">See the code</button>
+                    <a href="http://willyhedge.com/WDV205/assignments/bootstrap-final/index.html"><button type="button">See the site</button></a>
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/skylineFitness"><button type="button">See the code</button></a>
                 </div>
             </div>
 
