--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -152,7 +152,7 @@
                     <p class="project-desc">Sample advertisement created for Iowa Hawkeye football tickets on the
                         University of Iowa homepage</p>
                     <p class="skills-used">Skills used: HTML, CSS, CSS Animation</p>
-                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html"><button
+                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html" target="_blank"><button
                             type="button">See the site</button></a>
                     <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd" target="_blank"><button
                             type="button">See the code</button></a>
