--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -140,7 +140,7 @@
                     <p class="skills-used">Skills used: HTML, CSS, Javascript, Local storage</p>
                     <a href="http://willyhedge.com/WDV321/assignments/recipeManager/index.html" target="_blank"><button
                             type="button">See the site</button></a>
-                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/recipeManager" target="_blank"><button
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/recipeManager"><button
                             type="button">See the code</button></a>
                 </div>
             </div>
@@ -152,9 +152,9 @@
                     <p class="project-desc">Sample advertisement created for Iowa Hawkeye football tickets on the
                         University of Iowa homepage</p>
                     <p class="skills-used">Skills used: HTML, CSS, CSS Animation</p>
-                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html" target="_blank"><button
+                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html"><button
                             type="button">See the site</button></a>
-                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd" target="_blank"><button
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd"><button
                             type="button">See the code</button></a>
                 </div>
             </div>
@@ -184,8 +184,8 @@
                     <h1 class="project-title">Skyline Fitness Website</h1>
                     <p class="project-desc">Fictional gym website that uses Bootstrap as the layout tool</p>
                     <p class="skills-used">Skills used: HTML, CSS, Bootstrap, CSS Animation</p>
-                    <a href="http://willyhedge.com/WDV205/assignments/bootstrap-final/index.html" target="_blank"><button type="button">See the site</button></a>
-                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/skylineFitness" target="_blank"><button type="button">See the code</button></a>
+                    <a href="http://willyhedge.com/WDV205/assignments/bootstrap-final/index.html"><button type="button">See the site</button></a>
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/skylineFitness"><button type="button">See the code</button></a>
                 </div>
             </div>
 
