Added a link on navigation for WDV495 homework

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,6 +42,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="">WDV441</a></li>
+                <li><a href="WDV495/wdv495homework.html">WDV495</a></li>
                 <li><a href="contact.php">Contact Me</a></li>
             </ul>
         </div>
