Made a few functionality and styling changes

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -39,12 +39,11 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="">WDV441</a></li>
-                <li><a href="WDV495/wdv495homework.html">WDV495</a></li>
-                <li><a href="contact.php">Contact Me</a></li>
+                <li class="nav-item"><a href="#">Home</a></li>
+                <li class="nav-item"><a href="#about">About Me</a></li>
+                <li class="nav-item" ><a href="#portfolio">Portfolio</a></li>
+                <li class="nav-item" ><a href="WDV495/wdv495homework.html">WDV495</a></li>
+                <li class="nav-item"><a href="contact.php">Contact Me</a></li>
             </ul>
         </div>
     </nav>
