--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -153,9 +153,9 @@
                     <p class="project-desc">Sample advertisement created for Iowa Hawkeye football tickets on the
                         University of Iowa homepage</p>
                     <p class="skills-used">Skills used: HTML, CSS, CSS Animation</p>
-                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html"><button
+                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html" target="_blank"><button
                             type="button">See the site</button></a>
-                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd"><button
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd" target="_blank"><button
                             type="button">See the code</button></a>
                 </div>
             </div>
@@ -212,6 +212,17 @@
                     <p class="skills-used">Skills used: Mocha & Chai, command prompt</p>
                     <a href="https://github.com/willhedgecock/wdv321/tree/master/mochavalidatephonenum"
                         target="_blank"><button type="button">See the code</button></a>
+                </div>
+            </div>
+
+            <div class="grid-project project7">
+                <img src="images/sweets-buffet.jpg" alt="Wordpress site called Sweets Buffet">
+                <div class="pic-overlay">
+                    <h1 class="project-title">WordPress E-Commerce Site</h1>
+                    <p class="project-desc">Fictional candy store "The Sweet Buffet" created in WordPress</p>
+                    <p class="skills-used">Skills used: WordPress, various WordPress plugins, WordPress pop-up ads, suggestive selling
+                    <a href="http://willyhedge.com/WDV240/sweets-buffet/" target="_blank"><button type="button">See the site</button></a>
+                    </p>
                 </div>
             </div>
 
