Updated layout, added projects

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -41,8 +41,8 @@
             <ul>
                 <li class="nav-item"><a href="#">Home</a></li>
                 <li class="nav-item"><a href="#about">About Me</a></li>
-                <li class="nav-item" ><a href="#portfolio">Portfolio</a></li>
-                <li class="nav-item" ><a href="WDV495/wdv495homework.html">WDV495</a></li>
+                <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a href="WDV495/wdv495homework.html">WDV495</a></li>
                 <li class="nav-item"><a href="contact.php">Contact Me</a></li>
             </ul>
         </div>
@@ -130,37 +130,37 @@
 
         <h1>My Portfolio</h1>
 
-        <div class="grid-portfolio">
+        <div class="flex-portfolio">
 
-            <div class="grid-project project1">
+            <div class="project project1">
                 <img src="images/recipe-project.jpg" alt="Thumbnail for JS recipe project">
                 <div class="pic-overlay">
                     <h1 class="project-title">Javascript Recipe Manager</h1>
                     <p class="project-desc">Application that allows a user to modify recipe size dynamically, add a new
                         recipe and see the new recipe loaded onto the home page</p>
                     <p class="skills-used">Skills used: HTML, CSS, Javascript, Local storage</p>
-                    <a href="http://willyhedge.com/WDV321/assignments/recipeManager/index.html" target="_blank"><button
+                    <a href="https://willyhedge.com/WDV321/assignments/recipeManager/index.html" target="_blank"><button
                             type="button">See the site</button></a>
-                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/recipeManager"><button
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/recipeManager" target="_blank"><button
                             type="button">See the code</button></a>
                 </div>
             </div>
 
-            <div class="grid-project project2">
+            <div class="project project2">
                 <img src="images/advertisement-project.jpg" alt="Thumbnail CSS animation advertisement">
                 <div class="pic-overlay">
                     <h1 class="project-title">CSS Animation Advertisement</h1>
                     <p class="project-desc">Sample advertisement created for Iowa Hawkeye football tickets on the
                         University of Iowa homepage</p>
                     <p class="skills-used">Skills used: HTML, CSS, CSS Animation</p>
-                    <a href="http://willyhedge.com/WDV205/assignments/animationAd-final/index.html" target="_blank"><button
-                            type="button">See the site</button></a>
-                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd" target="_blank"><button
-                            type="button">See the code</button></a>
+                    <a href="https://willyhedge.com/WDV205/assignments/animationAd-final/index.html"
+                        target="_blank"><button type="button">See the site</button></a>
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd"
+                        target="_blank"><button type="button">See the code</button></a>
                 </div>
             </div>
 
-            <div class="grid-project project3">
+            <div class="project project3">
                 <img src="images/music-shop-project.jpg" alt="Thumbnail for PHP music store project">
                 <div class="pic-overlay">
                     <h1 class="project-title">PHP Content Management Website</h1>
@@ -172,25 +172,27 @@
                     </p>
                     <p class="skills-used">Skills used: HTML, CSS, Javascript, PHP, SQL, self-posting forms, form
                         validation, Paypal Sandbox, YouTube video embedding</p>
-                    <a href="http://willyhedge.com/WDV341/portfolioProject/index.php" target="_blank"><button
+                    <a href="https://willyhedge.com/WDV341/portfolioProject/index.php" target="_blank"><button
                             type="button">See the site</button></a>
                     <a href="https://github.com/willhedgecock/wdv341/tree/master/portfolioProject"
                         target="_blank"><button type="button">See the code</button></a>
                 </div>
             </div>
 
-            <div class="grid-project project4">
+            <div class="project project4">
                 <img src="images/skyline-project.jpg" alt="Thumbnail for Skyline Fitness Gym">
                 <div class="pic-overlay">
                     <h1 class="project-title">Skyline Fitness Website</h1>
                     <p class="project-desc">Fictional gym website that uses Bootstrap as the layout tool</p>
                     <p class="skills-used">Skills used: HTML, CSS, Bootstrap, CSS Animation</p>
-                    <a href="http://willyhedge.com/WDV205/assignments/bootstrap-final/index.html"><button type="button">See the site</button></a>
-                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/skylineFitness"><button type="button">See the code</button></a>
+                    <a href="https://willyhedge.com/WDV205/assignments/bootstrap-final/index.html" target="_blank"><button
+                            type="button">See the site</button></a>
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/skylineFitness" target="_blank"><button
+                            type="button">See the code</button></a>
                 </div>
             </div>
 
-            <div class="grid-project project5">
+            <div class="project project5">
                 <img src="images/react-project.jpg" alt="Thumbnail for React movie application">
                 <div class="pic-overlay">
                     <h1 class="project-title">React Movie Application</h1>
@@ -204,7 +206,7 @@
                 </div>
             </div>
 
-            <div class="grid-project project6">
+            <div class="project project6">
                 <img src="images/TDD-project.jpg" alt="Thumbnail for TDD assignment">
                 <div class="pic-overlay">
                     <h1 class="project-title">Test Driven Development -- Phone Number Validation</h1>
@@ -215,16 +217,30 @@
                 </div>
             </div>
 
-            <div class="grid-project project7">
+            <div class="project project7">
                 <img src="images/sweets-buffet.jpg" alt="Wordpress site called Sweets Buffet">
                 <div class="pic-overlay">
                     <h1 class="project-title">WordPress E-Commerce Site</h1>
                     <p class="project-desc">Fictional candy store "The Sweet Buffet" created in WordPress</p>
-                    <p class="skills-used">Skills used: WordPress, various WordPress plugins, WordPress pop-up ads, suggestive selling
-                    <a href="http://willyhedge.com/WDV240/sweets-buffet/" target="_blank"><button type="button">See the site</button></a>
-                    </p>
+                    <p class="skills-used">Skills used: WordPress, various WordPress plugins, WordPress pop-up ads,
+                        suggestive selling</p>
+                    <a href="https://willyhedge.com/WDV240/sweets-buffet/" target="_blank"><button type="button">See the
+                            site</button></a>
                 </div>
             </div>
+
+            <div class="project project8">
+                <img src="images/guessingGame.jpg" alt="Random number guessing game using JQuery">
+                <div class="pic-overlay">
+                    <h1 class="project-title">JQuery Random Guessing Game</h1>
+                    <p class="project-desc">Allows users to select a random number range and then sends a message based on their guess</p>
+                    <p class="skills-used">Skills used: JQuery, HTML, CSS</p>
+                    <a href="https://willyhedge.com/WDV321/assignments/hiLoGameJQuery.html" target="_blank"><button type="button">See the
+                            site</button></a>
+                </div>
+            </div>
+
+
 
         </div>
 
