Adding a forgotten link

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -237,6 +237,8 @@
                     <p class="skills-used">Skills used: JQuery, HTML, CSS</p>
                     <a href="https://willyhedge.com/WDV321/assignments/hiLoGameJQuery.html" target="_blank"><button type="button">See the
                             site</button></a>
+                    <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/jQueryHighLowGame" target="_blank"><button type="button">See the
+                        code</button></a>
                 </div>
             </div>
 
