--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body onload="addProjectDescMobile()">
+<body>
 
     <nav class="navbar">
         <div class="brand-name">
@@ -282,6 +282,8 @@
             offset: 120,
             duration: 1000
         });
+
+        addProjectDescMobile();
     </script>
 
 </body>
