Added meta tags to the page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Will Hedgecock's portfolio site">
+    <meta name="keywords" content="Will, Hedgecock, Iowa, IA, web development, portfolio">
+    <meta name="author" content="Will Hedgecock">
+
     <title>Will Hedgecock</title>
 
     <!--STYLESHEET-->
@@ -138,7 +142,7 @@
                     <h1 class="project-title">Javascript Recipe Manager</h1>
                     <p class="project-desc">Application that allows a user to modify recipe size dynamically, add a new
                         recipe and see the new recipe loaded onto the home page</p>
-                    <p class="skills-used">Skills used: HTML, CSS, Javascript, Local storage</p>
+                    <p class="skills-used">Skills used: HTML, CSS, Media Queries, Javascript, Local storage</p>
                     <a href="https://willyhedge.com/WDV321/assignments/recipeManager/index.html" target="_blank"><button
                             type="button">See the site</button></a>
                     <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/recipeManager" target="_blank"><button
@@ -152,7 +156,7 @@
                     <h1 class="project-title">CSS Animation Advertisement</h1>
                     <p class="project-desc">Sample advertisement created for Iowa Hawkeye football tickets on the
                         University of Iowa homepage</p>
-                    <p class="skills-used">Skills used: HTML, CSS, CSS Animation</p>
+                    <p class="skills-used">Skills used: HTML, CSS, Media Queries, CSS Animation</p>
                     <a href="https://willyhedge.com/WDV205/assignments/animationAd-final/index.html"
                         target="_blank"><button type="button">See the site</button></a>
                     <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/hawkeyeAnimationAd"
@@ -170,7 +174,7 @@
                         PHP sessions to verify a user has logged in. It also
                         features Paypal as the payment processor
                     </p>
-                    <p class="skills-used">Skills used: HTML, CSS, Javascript, PHP, SQL, self-posting forms, form
+                    <p class="skills-used">Skills used: HTML, CSS, Javascript, Media Queries, PHP, SQL, self-posting forms, PHP form
                         validation, Paypal Sandbox, YouTube video embedding</p>
                     <a href="https://willyhedge.com/WDV341/portfolioProject/index.php" target="_blank"><button
                             type="button">See the site</button></a>
@@ -184,7 +188,7 @@
                 <div class="pic-overlay">
                     <h1 class="project-title">Skyline Fitness Website</h1>
                     <p class="project-desc">Fictional gym website that uses Bootstrap as the layout tool</p>
-                    <p class="skills-used">Skills used: HTML, CSS, Bootstrap, CSS Animation</p>
+                    <p class="skills-used">Skills used: HTML, CSS, Bootstrap, CSS Animation, Media Queries</p>
                     <a href="https://willyhedge.com/WDV205/assignments/bootstrap-final/index.html" target="_blank"><button
                             type="button">See the site</button></a>
                     <a href="https://github.com/willhedgecock/portfolioProjects/tree/master/skylineFitness" target="_blank"><button
@@ -211,7 +215,7 @@
                 <div class="pic-overlay">
                     <h1 class="project-title">Test Driven Development -- Phone Number Validation</h1>
                     <p class="project-desc">TDD tests run using Mocha and Chai to verify inputted phone numbers</p>
-                    <p class="skills-used">Skills used: Mocha & Chai, command prompt</p>
+                    <p class="skills-used">Skills used: Mocha & Chai testing software, command prompt</p>
                     <a href="https://github.com/willhedgecock/wdv321/tree/master/mochavalidatephonenum"
                         target="_blank"><button type="button">See the code</button></a>
                 </div>
